chore: update files and tags

--- a/my-static-site/index.html
+++ b/my-static-site/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GuateGeeks</title>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="main-container">
         <div class="initial-box">
             <header>
                 <div class="logo">
-                    <img src="/imagenes/logo.svg" alt="Logo GuateGeeks">
+                    <img src="/images/logo.svg" alt="logo-guategeeks">
                 </div>
                 <nav>
                     <ul>
@@ -42,7 +42,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                     <button>CONTACTÁNOS</button>
                     <div class="image">
-                        <img src="/imagenes/lego-que-somos.png" alt="lego-que-somos">
+                        <img src="/images/lego-aboutus.png" alt="lego-about-us">
                     </div>
              </div>
             </div>
@@ -102,6 +102,6 @@
             <p>Copyright © GuateGeeks 2024</p>
         </footer>
     </div>
-    <script src="/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
