style:design changes

--- a/my-static-site/index.html
+++ b/my-static-site/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#que-somos">¿Qué somos?</a></li>
+                        <li><a href="#aboutus">¿Qué somos?</a></li>
                         <li class="separator">|</li>
                         <li><a href="#metodologia">Nuestra Metodología</a></li>
                         <li class="separator">|</li>
@@ -35,16 +35,19 @@
             </header>
             <div class="big-box"></div>
         </div>
-        <section id="que-somos">
-            <div class="que-somos-container">
+        <section id="aboutus">
+            <div class="aboutus-container">
                 <div class="content">
                     <h1>¿QUÉ SOMOS?</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                    <button>CONTACTÁNOS</button>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo, orci in vehicula pulvinar, odio urna venenatis dolor, vel sodales justo erat at turpis. Duis ut dui nisi. Donec hendrerit in nulla quis aliquam. Vivamus condimentum augue nunc, eget tempor est commodo nec. Donec mattis lectus ut ligula porta, vitae dignissim dui semper. Maecenas semper massa sit amet quam varius viverra. Proin maximus sodales urna eu congue. Integer accumsan accumsan mi et semper. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                    <p>Duis eu maximus dui, id commodo justo. Aliquam sagittis consectetur sapien, nec iaculis nulla volutpat vitae. Duis eleifend nec neque ut pretium. In ac lacus rhoncus, feugiat arcu nec, varius enim. Nunc blandit dapibus ante, sed porta eros gravida eget. Nunc fringilla in dolor a volutpat.</p>
+                    <a href="#contacto" class="button-link">
+                        <button>CONTACTÁNOS</button>
+                    </a>
+                </div>
                     <div class="image">
                         <img src="/images/lego-aboutus.png" alt="lego-about-us">
                     </div>
-             </div>
             </div>
         </section>
         <section id="metodologia">
