refactor: rename section and associated classes from 'metodologia' to 'methodology'

--- a/my-static-site/index.html
+++ b/my-static-site/index.html
@@ -41,7 +41,7 @@
                     <h1>¿QUÉ SOMOS?</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo, orci in vehicula pulvinar, odio urna venenatis dolor, vel sodales justo erat at turpis. Duis ut dui nisi. Donec hendrerit in nulla quis aliquam. Vivamus condimentum augue nunc, eget tempor est commodo nec. Donec mattis lectus ut ligula porta, vitae dignissim dui semper. Maecenas semper massa sit amet quam varius viverra. Proin maximus sodales urna eu congue. Integer accumsan accumsan mi et semper. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
                     <p>Duis eu maximus dui, id commodo justo. Aliquam sagittis consectetur sapien, nec iaculis nulla volutpat vitae. Duis eleifend nec neque ut pretium. In ac lacus rhoncus, feugiat arcu nec, varius enim. Nunc blandit dapibus ante, sed porta eros gravida eget. Nunc fringilla in dolor a volutpat.</p>
-                    <a href="#contacto" class="button-link">
+                    <a href="#contacto" class="button-link" id="contact-button">
                         <button>CONTACTÁNOS</button>
                     </a>
                 </div>
@@ -50,11 +50,11 @@
                     </div>
             </div>
         </section>
-        <section id="metodologia">
-            <div class="metodologia-container">
+        <section id="methodology">
+            <div class="methodology-container">
                 <h1>Nuestra Metodología</h1>
                 <p>Descripción de nuestra metodología...</p>
-                <div class="metodologia-boxes">
+                <div class="methodology-boxes">
                     <div class="box">Recuadro 1</div>
                     <div class="box">Recuadro 2</div>
                     <div class="box">Recuadro 3</div>
