refactor: boxes to image

--- a/my-static-site/index.html
+++ b/my-static-site/index.html
@@ -53,13 +53,9 @@
         <section id="methodology">
             <div class="methodology-container">
                 <h1>Nuestra Metodología</h1>
-                <p>Descripción de nuestra metodología...</p>
-                <div class="methodology-boxes">
-                    <div class="box">Recuadro 1</div>
-                    <div class="box">Recuadro 2</div>
-                    <div class="box">Recuadro 3</div>
-                    <div class="box">Recuadro 4</div>
-                    <div class="box">Recuadro 5</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo, orci in vehicula pulvinar, odio urna venenatis dolor, vel sodales justo erat at turpis. Duis ut dui nisi. Donec hendrerit in nulla quis aliquam. Vivamus condimentum augue nunc, eget tempor est commodo nec. Donec mattis lectus ut ligula porta, vitae dignissim dui semper. Maecenas semper massa sit amet quam varius viverra. Proin maximus sodales urna eu congue. Integer accumsan accumsan mi et semper. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <div class="image-methodology">
+                    <img src="/images/steam.png" alt="steam">
                 </div>
             </div>
         </section>
