refactor: rename #id in menu

--- a/my-static-site/index.html
+++ b/my-static-site/index.html
@@ -18,7 +18,7 @@
                     <ul>
                         <li><a href="#aboutus">¿Qué somos?</a></li>
                         <li class="separator">|</li>
-                        <li><a href="#metodologia">Nuestra Metodología</a></li>
+                        <li><a href="#methodology">Nuestra Metodología</a></li>
                         <li class="separator">|</li>
                         <li><a href="#que-hacemos">¿Qué hacemos?</a></li>
                         <li class="separator">|</li>
