feat: complete and rename 'what-we-do' section

--- a/my-static-site/index.html
+++ b/my-static-site/index.html
@@ -20,7 +20,7 @@
                         <li class="separator">|</li>
                         <li><a href="#methodology">Nuestra Metodología</a></li>
                         <li class="separator">|</li>
-                        <li><a href="#que-hacemos">¿Qué hacemos?</a></li>
+                        <li><a href="#what-we-do">¿Qué hacemos?</a></li>
                         <li class="separator">|</li>
                         <li><a href="#testimonios">Testimonios</a></li>
                         <li class="separator">|</li>
@@ -38,11 +38,11 @@
         <section id="aboutus">
             <div class="aboutus-container">
                 <div class="content">
-                    <h1>¿QUÉ SOMOS?</h1>
+                    <h1>¿qué somos?</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo, orci in vehicula pulvinar, odio urna venenatis dolor, vel sodales justo erat at turpis. Duis ut dui nisi. Donec hendrerit in nulla quis aliquam. Vivamus condimentum augue nunc, eget tempor est commodo nec. Donec mattis lectus ut ligula porta, vitae dignissim dui semper. Maecenas semper massa sit amet quam varius viverra. Proin maximus sodales urna eu congue. Integer accumsan accumsan mi et semper. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
                     <p>Duis eu maximus dui, id commodo justo. Aliquam sagittis consectetur sapien, nec iaculis nulla volutpat vitae. Duis eleifend nec neque ut pretium. In ac lacus rhoncus, feugiat arcu nec, varius enim. Nunc blandit dapibus ante, sed porta eros gravida eget. Nunc fringilla in dolor a volutpat.</p>
                     <a href="#contacto" class="button-link" id="contact-button">
-                        <button>CONTACTÁNOS</button>
+                        <button>contactános</button>
                     </a>
                 </div>
                     <div class="image">
@@ -52,24 +52,26 @@
         </section>
         <section id="methodology">
             <div class="methodology-container">
-                <h1>Nuestra Metodología</h1>
+                <h1>nuestra metodología</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo, orci in vehicula pulvinar, odio urna venenatis dolor, vel sodales justo erat at turpis. Duis ut dui nisi. Donec hendrerit in nulla quis aliquam. Vivamus condimentum augue nunc, eget tempor est commodo nec. Donec mattis lectus ut ligula porta, vitae dignissim dui semper. Maecenas semper massa sit amet quam varius viverra. Proin maximus sodales urna eu congue. Integer accumsan accumsan mi et semper. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            </div>
                 <div class="image-methodology">
                     <img src="/images/steam.png" alt="steam">
                 </div>
-            </div>
         </section>
-        <section id="que-hacemos">
-            <div class="que-hacemos-container">
-                <h1>Qué Hacemos</h1>
-                <p>Descripción de qué hacemos...</p>
+        <section id="what-we-do">
+            <div class="what-we-do-container">
+                <div class="what-we-do-content">
+                    <h1>¿qué hacemos?</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo, orci in vehicula pulvinar, odio urna venenatis dolor, vel sodales justo erat at turpis. Duis ut dui nisi. Donec hendrerit in nulla quis aliquam. Vivamus condimentum augue nunc, eget tempor est commodo nec. Donec mattis lectus ut ligula porta, vitae dignissim dui semper. Maecenas semper massa sit amet quam varius viverra. Proin maximus sodales urna eu congue. Integer accumsan accumsan mi et semper. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                </div>
                 <div class="main-box">
-                    <div class="rect-box">Recuadro</div>
-                    <div class="rect-box">Rectángulo</div>
+                    <div class="box"></div>
+                    <div class="box"></div>
                 </div>
                 <div class="secondary-box">
-                    <div class="box">Recuadro Grande 1</div>
-                    <div class="box">Recuadro Grande 2</div>
+                    <div class="box"></div>
+                    <div class="box"></div>
                 </div>
             </div>
         </section>
