style: design and rename 'Testimonials' section

--- a/my-static-site/index.html
+++ b/my-static-site/index.html
@@ -22,7 +22,7 @@
                         <li class="separator">|</li>
                         <li><a href="#what-we-do">¿Qué hacemos?</a></li>
                         <li class="separator">|</li>
-                        <li><a href="#testimonios">Testimonios</a></li>
+                        <li><a href="#testimonials">testimonios</a></li>
                         <li class="separator">|</li>
                         <li><a href="#contacto">Contáctenos</a></li>
                     </ul>
@@ -75,12 +75,14 @@
                 </div>
             </div>
         </section>
-        <section id="testimonios">
-            <div class="testimonios-container">
-                <h1>Testimonios</h1>
+        <section id="testimonials">
+            <div class="testimonials-container">
+                <h1>testimonios</h1>
                 <div class="testimonial">
-                    <img src="testimonial.jpg" alt="Foto Testimonial" class="testimonial-img">
-                    <p class="testimonial-text">"Texto del testimonio..."</p>
+                    <div class="testimonial-image"></div>
+                    <div class="testimonial-content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo, orci in vehicula pulvinar, odio urna venenatis dolor, vel sodales justo erat at turpis. Duis ut dui nisi. Donec hendrerit in nulla quis aliquam. Vivamus condimentum augue nunc, eget tempor est commodo nec. Donec mattis lectus ut ligula porta, vitae dignissim dui semper. Maecenas semper massa sit amet quam varius viverra. Proin maximus sodales urna eu congue. Integer accumsan accumsan mi et semper. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                    </div>
                 </div>
             </div>
         </section>
