style: finalize contact and footer

--- a/my-static-site/index.html
+++ b/my-static-site/index.html
@@ -6,13 +6,14 @@
     <title>GuateGeeks</title>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="https://kit.fontawesome.com/8435ad2454.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="main-container">
         <div class="initial-box">
             <header>
                 <div class="logo">
-                    <img src="/images/logo.svg" alt="logo-guategeeks">
+                    <img src="/images/logo-gg.png" alt="logo-guategeeks">
                 </div>
                 <nav>
                     <ul>
@@ -24,7 +25,7 @@
                         <li class="separator">|</li>
                         <li><a href="#testimonials">testimonios</a></li>
                         <li class="separator">|</li>
-                        <li><a href="#contacto">Contáctenos</a></li>
+                        <li><a href="#contact">Contáctenos</a></li>
                     </ul>
                     <div class="hamburger-menu" id="hamburger-menu">
                         <span></span>
@@ -86,21 +87,45 @@
                 </div>
             </div>
         </section>
-        <section id="contacto">
-            <div class="contacto-container">
-                <h1>Contáctenos</h1>
-                <div class="contact-info">
-                    <p><i class="icon phone-icon"></i> Teléfono: 123-456-789</p>
-                    <p><i class="icon email-icon"></i> Email: contacto@empresa.com</p>
-                    <p><i class="icon linkedin-icon"></i> LinkedIn: /empresa</p>
-                    <p><i class="icon instagram-icon"></i> Instagram: @empresa</p>
-                    <p><i class="icon facebook-icon"></i> Facebook: /empresa</p>
-                </div>
-                <div class="contact-image">
-                    <img src="contact.jpg" alt="Imagen de Contacto">
+        <section id="contact">
+            <div class="contact-container">
+                <div class="contact-content">
+                    <h1>Contáctanos</h1>
+                    <div class="contact-info-box">
+                        <div class="contact-info-item">
+                            <a href="https://wa.me/50212121212" target="_blank" rel="noopener noreferrer" title="Contact us on WhatsApp">
+                                <i class="fas fa-phone-alt"></i>
+                                <span>Phone: +502 1212 1212</span>
+                            </a>
+                        </div>
+                        <div class="contact-info-item">
+                            <a href="mailto:guategeeks3D@gmail.com" target="_blank" rel="noopener noreferrer" title="Send us an email">
+                                <i class="fas fa-envelope"></i>
+                                <span>Email: guategeeks3D@gmail.com</span>
+                            </a>
+                        </div>
+                        <div class="contact-info-item">
+                            <a href="https://www.linkedin.com/in/guate-geeks-a9a791210" target="_blank" rel="noopener noreferrer" title="Visit our LinkedIn profile">
+                                <i class="fab fa-linkedin"></i>
+                                <span>LinkedIn: guategeeks</span>
+                            </a>
+                        </div>
+                        <div class="contact-info-item">
+                            <a href="https://www.instagram.com/guategeeks/" target="_blank" rel="noopener noreferrer" title="Visit our Instagram profile">
+                                <i class="fab fa-instagram"></i>
+                                <span>Instagram: @guategeeks</span>
+                            </a>
+                        </div>
+                        <div class="contact-info-item">
+                            <a href="https://www.facebook.com/GuateGeeksGT" target="_blank" rel="noopener noreferrer" title="Visit our Facebook page">
+                                <i class="fab fa-facebook"></i>
+                                <span>Facebook: @guategeeks</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
+        </section>        
         <footer>
             <p>Copyright © GuateGeeks 2024</p>
         </footer>
