style: finalize contact and footer

--- a/my-static-site/index.html
+++ b/my-static-site/index.html
@@ -90,7 +90,7 @@
         <section id="contact">
             <div class="contact-container">
                 <div class="contact-content">
-                    <h1>Contáctanos</h1>
+                    <h1>Contactános</h1>
                     <div class="contact-info-box">
                         <div class="contact-info-item">
                             <a href="https://wa.me/50212121212" target="_blank" rel="noopener noreferrer" title="Contact us on WhatsApp">
